<?xml version="1.0"?>
<package format="2">
  <name>image_converter</name>
  <version>0.0.1</version>
  <description>The compressed_to_raw_image package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD-3-Clause</license>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <build_depend>catkin</build_depend>
  <build_depend>opencv</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>